Fixing image alignments

--- a/projfinalproposal/style.css
+++ b/projfinalproposal/style.css
@@ -15,12 +15,6 @@ h2 {
 
 h3 {
   text-align: center;
-  margin: 5px;
-}
-
-h5 {
-  text-align: center;
-  margin: 5px;
 }
 
 .column {
